--- a/templates/register/home.html
+++ b/templates/register/home.html
@@ -82,6 +82,11 @@
                         <h4><a href={{contract_url}}>Read the contract here</a></h4>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <h5><a href="http://armada.nu/static/i17.pdf">Read the invitation here</a></h5>
+                    </div>
+                </div>
                 {% if not signed_up %}
                 <form method="post">
                 <div class="row">
